# new-rob8

./: .gitignore  CMakeLists.txt  README.md  README.txt  frames.gv  install_dependencies.sh  marker0_to_cam2_transform.txt  marker0_to_cam2_transform_alt.txt  package.xml
launch/: alignment_debugger.launch  calibrate_cam2_to_marker0.launch  calibrate_marker0.launch  dual_camera_aruco_merge.launch  merge_cameras.launch  multi_marker_alignment.launch  test_aruco_detector.launch
rviz/: aruco_test.rviz  cccc.rviz  xxx.rviz
scripts/: alignment_debugger.py  aruco_detector_ros.py  aruco_pointcloud_merger.py  calibrate_cam2_via_markers.py  dual_camera_aruco_detector.py  marker0_to_cam2_calculator.py  marker0_to_cam2_manual_calculator.py  tf_echo_cameras.py
src/: aruco_pointcloud_merger_node.cpp  aruco_tf_visualizer.py
src/dual_camera_simulation/: CMakeLists.txt  README.md  package.xml
src/dual_camera_simulation/config/: aruco_detector_params.yaml  camera1_params.yaml  camera2_params.yaml  tf_params.yaml
src/dual_camera_simulation/docs/: QUICK_START.md  TECHNICAL.md
src/dual_camera_simulation/include/dual_camera_simulation/: camera_calibration.h  point_cloud_filter.h  point_cloud_merger.h
src/dual_camera_simulation/launch/: aruco_detection.launch  calibration.launch  cameras.launch  dual_camera_simulation.launch  pointcloud_processing.launch  record_pointcloud.launch  rviz.launch  simulation.launch
src/dual_camera_simulation/models/: aruco_marker.urdf.xacro  dual_camera_setup.urdf.xacro  realsense_d435.urdf.xacro
src/dual_camera_simulation/models/aruco_marker_0/: aruco_marker.sdf  model.config
src/dual_camera_simulation/rviz/: config.rviz  dual_camera_view.rviz
src/dual_camera_simulation/scripts/: calculate_camera_tf.py  create_dir.sh  demo.sh  evaluate_pointcloud.py  merge_pointclouds.py  visualize_calibration.py
src/dual_camera_simulation/src/: camera_calibration_node.cpp  point_cloud_filter_node.cpp  point_cloud_merger_node.cpp
src/dual_camera_simulation/worlds/: dual_camera_world.world  test_world.world
src/hand_band_control/: CMakeLists.txt  package.xml
src/hand_band_control/launch/: hand_band_control.launch
src/hand_band_control/scripts/: hand_band_controller.py
src/intent_pred_pkg/: CMakeLists.txt  package.xml
src/intent_pred_pkg/include/intent_pred_pkg/: intent_prediction_calc.h  intent_prediction_node.h
src/intent_pred_pkg/launch/: intent_prediction.launch
src/intent_pred_pkg/scripts/: intent_prediction_calc.py  intent_prediction_node.py
src/intent_pred_pkg/src/: intent_prediction_calc.cpp  intent_prediction_node.cpp
src/mia_hand_ros_pkgs/: README.md
src/mia_hand_ros_pkgs/mia_hand_bringup/: README.md
src/mia_hand_ros_pkgs/mia_hand_bringup/launch/: mia_hand_Sim.launch  mia_hand_Sim_traj.launch  mia_hand_driver_node.launch  mia_hand_hw.launch  mia_hand_hw_moveit.launch  mia_hand_hw_traj.launch
src/mia_hand_ros_pkgs/mia_hand_description/: README.md
src/mia_hand_ros_pkgs/mia_hand_description/calibration/: joint_limits.yaml  transmission_config.yaml
src/mia_hand_ros_pkgs/mia_hand_description/launch/: view_mia_hand_rviz.launch
src/mia_hand_ros_pkgs/mia_hand_description/src/: mia_thumb_opp_passivejoints.cpp  remap_mia_joint_states.cpp
src/mia_hand_ros_pkgs/mia_hand_description/urdf/: mia_hand_gazebo.urdf.xacro  mia_hand_launch.urdf.xacro  mia_hand_left.urdf.xacro
src/mia_hand_ros_pkgs/mia_hand_driver/: CMakeLists.txt
src/mia_hand_ros_pkgs/mia_hand_driver/src/: cpp_driver.cpp  ros_driver.cpp
src/mia_hand_ros_pkgs/mia_hand_gazebo/: README.md
src/mia_hand_ros_pkgs/mia_hand_gazebo/src/: Mia_hw_sim.cpp
src/mia_hand_ros_pkgs/mia_hand_msgs/: CMakeLists.txt
src/mia_hand_ros_pkgs/mia_hand_msgs/srv/: GetMode.srv
src/mia_hand_ros_pkgs/mia_hand_ros_control/: README.md
src/mia_hand_ros_pkgs/mia_hand_ros_control/config/: mia_hand_hw_controllers.yaml
src/mia_hand_ros_pkgs/mia_hand_ros_control/src/: Mia_hw_node.cpp  mia_hw_interface.cpp  mia_index_transmission.cpp  mia_thfle_transmission.cpp
src/pcl_processing/: CMakeLists.txt  package.xml
src/pcl_processing/config/: grasp_params.yaml  pcl_processing_params.yaml
src/pcl_processing/include/pcl_processing/: BoxGraspLogic.hpp  CylinderGraspLogic.hpp  GraspPoseEstimator.hpp  GraspPoseEstimatorConfig.hpp  (+3 more)
src/pcl_processing/launch/: grasp_pose_estimation.launch  launch_depth_image_proc.launch  pcl_processing.launch
src/pcl_processing/msg/: GeometricPrimitive.msg  GraspReference.msg
src/pcl_processing/src/: BoxGraspLogic.cpp  CylinderGraspLogic.cpp  GraspPoseEstimator.cpp  PCLProcessor.cpp  PCLProcessorConfig.cpp  SphereGraspLogic.cpp  grasp_pose_estimation_node.cpp  pcl_processing_node.cpp  stdafx.h  test_lccp.cpp
src/pointcloud_merger_pkg/: CMakeLists.txt
src/pointcloud_merger_pkg/launch/: merger.launch
src/realsense_aruco_merger/: .gitignore  CMakeLists.txt  package.xml
src/realsense_aruco_merger/calibration/: marker0_to_cam2_transform.yaml
src/realsense_aruco_merger/rviz/: alignment_debug.rviz  dual_camera_merge.rviz  dual_camera_merge_optimized.rviz  last_nice.rviz  merge_config.rviz
src/realsense_aruco_merger/scripts/: aruco_detector_ros.py  aruco_pointcloud_merger.py  aruco_tf_visualizer.py  dual_camera_aruco_detector.py  marker0_to_cam2_calculator.py
src/realsense_aruco_merger/src/: aruco_pointcloud_merger_node.cpp  dual_camera_aruco_detector_node.cpp  pointcloud_merger.py
src/ros_myo/scripts/: bluetooth.py  common.py  emg_ascii_graph.py  myo-rawNode.py
(+427 files in other folders)
